# civet

./: civet.cabal
lib/civet/: Model.hs  Semigroup.hs  Store.hs  Utils.hs
src/: Main.hs
