cabal-version: >=1.10
name: civet
version: 0.1.0.0
license: BSD3
license-file: LICENSE
copyright: 2019 Author name here
maintainer: example@example.com
author: Author name here
homepage: https://github.com/githubuser/civet#readme
category: Web
build-type: Simple
extra-source-files:
    README.md

library
    hs-source-dirs: lib
    default-language: Haskell2010
    build-depends:
        base -any,
        containers -any
    exposed-modules:
        Civet.Model
        Civet.Store
        Civet.Utils

executable civet
    main-is: Main.hs
    hs-source-dirs: src
    default-language: Haskell2010
    other-modules:
        Paths_civet
    build-depends:
        base >=4.7 && <5,
        containers -any,
        civet -any
